--- a/index.html
+++ b/index.html
@@ -93,15 +93,6 @@
                     <a href="#projects" class="nav-link text-gray-700 hover:text-blue-600">Projects</a>
                     <a href="#contact" class="nav-link text-gray-700 hover:text-blue-600">Contact</a>
                 </div>
-                <div class="md:hidden flex items-center">
-                    <button class="mobile-menu-button">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 6h16M4 12h16M4 18h16"></path>
-                        </svg>
-                    </button>
-                </div>
             </div>
         </div>
     </nav>
@@ -519,15 +510,13 @@
                     </div>
                 </div>
             </div>
+            <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
+                <p>© 2023 DataFolio. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 
     <script>
-        // Mobile menu toggle
-        document.querySelector('.mobile-menu-button').addEventListener('click', function () {
-            document.querySelector('.mobile-menu').classList.toggle('hidden');
-        });
-
         // Form submission handling
         document.querySelector('form').addEventListener('submit', function (e) {
             e.preventDefault();
